@@ -1,3 +1,8 @@
+1999-10-24  Gary Houston  <ghouston@freewire.co.uk>
+
+	* tests/ports.test ("string ports"): test seeking/unreading from
+	an input string and seeking an output string.
+
 1999-10-20  Gary Houston  <ghouston@freewire.co.uk>
 
 	* tests/ports.test: in seek/tell test on input port, also test
